# short_url

./: README.MD  docker-compose.yaml
backend/: .coveragerc  .gitignore  Dockerfile  conftest.py  install_poetry.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/envs/: backend_env-default.env
backend/tiny_urls/: apps.py  models.py  serializers.py  urls.py  views.py
backend/tiny_urls/migrations/: 0001_initial.py
backend/tiny_urls/tests/: test_link_shortcut_model.py  test_serializers.py  test_views.py
