[tool.poetry]
name = "short-url"
version = "0.0.1"
description = "A URL shortener app for creating concise links"
authors = ["MWasile <maaciej.wasilewski@gmail.com>"]
license = "Beerware"
readme = "README.md"
packages = [{include = "short_url"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "3.14.0"
drf-spectacular = "0.26.2"
pytest = "7.3.1"
pytest-cov = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
django_debug_mode = "True"
python_files = "test_*.py"

addopts = [
    "--cov=.",
    "--cov-config=.coveragerc",
    "--cov-report",
    "term-missing:skip-covered",
    "--cov-fail-under=80"
]
